fix(search-modal): prevent focus ring from being clipped by scroll container

--- a/components/search-modal/element.css
+++ b/components/search-modal/element.css
@@ -165,6 +165,11 @@ a {
   &:visited {
     color: var(--color-link-visited);
   }
+
+  &:focus-visible {
+    outline: 2px solid var(--color-link-normal);
+    outline-offset: -2px;
+  }
 }
 
 .slug {
